; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_util.c_rb_data.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_util.c_rb_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i8** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @rb_data(%struct.TYPE_4__* %0, i8** %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8** %1, i8*** %4, align 8
  store i64 0, i64* %5, align 8
  br label %6

6:                                                ; preds = %29, %2
  %7 = load i64, i64* %5, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = call i64 @rb_size(%struct.TYPE_4__* %8)
  %10 = icmp ult i64 %7, %9
  br i1 %10, label %11, label %32

11:                                               ; preds = %6
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 2
  %14 = load i8**, i8*** %13, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* %5, align 8
  %19 = add i64 %17, %18
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = urem i64 %19, %22
  %24 = getelementptr inbounds i8*, i8** %14, i64 %23
  %25 = load i8*, i8** %24, align 8
  %26 = load i8**, i8*** %4, align 8
  %27 = load i64, i64* %5, align 8
  %28 = getelementptr inbounds i8*, i8** %26, i64 %27
  store i8* %25, i8** %28, align 8
  br label %29

29:                                               ; preds = %11
  %30 = load i64, i64* %5, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %5, align 8
  br label %6

32:                                               ; preds = %6
  %33 = load i64, i64* %5, align 8
  ret i64 %33
}

declare dso_local i64 @rb_size(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
